--- a/app/src/main/res/layout/activity_historia.xml
+++ b/app/src/main/res/layout/activity_historia.xml
@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Historia">
+    tools:context=".HistoryActivity">
 
-    <TextView
-        android:id="@+id/zapisHistori"
-        android:layout_width="383dp"
-        android:layout_height="556dp"
-        android:textSize="40dp"
-        android:gravity="center"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</android.support.constraint.ConstraintLayout>
+    <ListView
+        android:id="@+id/DatabaseListView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></ListView>
+
+</RelativeLayout>
